# agent-wiki

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/agent_wiki/: __init__.py  _types.py  cli.py  files.py  frontmatter.py  helpers.py  init_project.py  kanban.py  links.py  lint.py
src/agent_wiki/convert/: __init__.py  docx.py  pdf.py  pptx.py  xlsx.py
tests/: conftest.py  test_files.py  test_frontmatter.py  test_init_project.py  test_kanban.py  test_links.py  test_lint.py
