[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-wiki"
version = "0.1.0"
description = "Toolkit for building agent-maintained Obsidian-style wikis — link management, linting, document conversion, and agent coordination"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["agent", "wiki", "obsidian", "markdown", "knowledge-base", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.17",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
future = ["python-docx>=1.0.0", "python-pptx>=0.6.23", "openpyxl>=3.1.0"]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[project.scripts]
agent-wiki = "agent_wiki.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_wiki*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
